# CodeGraphContext

./: .env.example  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  Tools_Exploration.md  cookbook.md  docker-compose.yml  pyproject.toml  troubleshoot.md
.github/workflows/: post_discord_invite.yml  test.yml
docs/: CONTRIBUTING_LANGUAGES.md  Tools_Exploration.md  cookbook.md  docs.md  troubleshoot.md
examples/: export_dot_subgraph.py
sample_folder/javascript/: README.md  asyncAwait.js  errorHandling.js  events.js  functions.js  objects.js
src/codegraphcontext/: __init__.py  __main__.py  prompts.py  server.py
tests/: conftest.py  test_cgc_integration.py  test_graph_connections.py  test_graph_indexing.py  test_imports.py  test_jsonrpc.py  test_tools.py
tests/sample_project/: advanced_calls.py  advanced_classes.py  advanced_classes2.py  advanced_functions.py  advanced_imports.py  async_features.py  callbacks_decorators.py  circular1.py  circular2.py  class_instantiation.py  cli_and_dunder.py  complex_classes.py  comprehensions_generators.py  context_managers.py  control_flow.py  datatypes.py  dynamic_dispatch.py  dynamic_imports.py  function_chains.py  generators.py  import_reexports.py  mapping_calls.py  module_a.py  module_b.py  pattern_matching.py  typing_examples.py
tests/sample_project_cpp/: README.md  classes.cpp  control_flow.cpp  edge_cases.cpp  exceptions.cpp  file_io.cpp  main.cpp  (+5 more)
website/: .example.env  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vercel.json  vite.config.ts
(+113 files in other folders)
